# zano_native_lib

./: .env  .env.ios  .gitattributes  .gitignore  .gitmodules  README.CICD.md  README.md  build_android_contrib_libs.sh  build_android_libs.sh  build_ios_libs.sh
.github/actions/android/: action.yml
.github/actions/artifacts/: action.yml
.github/actions/env/: action.yml
.github/actions/workflow/: action.yml
.github/actions/zano/: action.yml
.github/workflows/: android-prebuids.yml  build-all-android.yml  build-all-ios.yml  build-all.yml  driver-build-all.yml  driver-build-zano-only.yml  ios-prebuids.yml  libbacktrace-android.yml  libboost-android.yml  libboost-ios.yml  libboost-linux.yml  libboost-macosx.yml  libboost-windows.yml  libiconv-linux.yml  libiconv-macosx.yml  libopenssl-android.yml  libopenssl-ios.yml  libopenssl-linux.yml  libopenssl-macosx.yml  libopenssl-windows.yml  libzano-android.yml  libzano-ios.yml  libzano-linux.yml  libzano-macosx.yml  libzano-windows.yml  orchestrate-all.yml  orchestrate-boost.yml  orchestrate-iconv.yml  orchestrate-libbacktrace.yml  orchestrate-openssl.yml  orchestrate-zano.yml  orchestrate_zano_mobile.yml  prebuids-android.yml  prebuids-ios.yml  prebuids.yml  pull-zano.yml  test-prebuids.yml
_install_android/armeabi-v7a/: VERSION
_install_android/share/pkgconfig/: zlib.pc
_install_android/x86/: VERSION
_install_android/x86_64/: VERSION
_install_ios/lib/libcommon.a.xcframework/: Info.plist
_install_ios/lib/libcrypto_.a.xcframework/: Info.plist
_install_ios/lib/libcurrency_core.a.xcframework/: Info.plist
_install_ios/lib/libwallet.a.xcframework/: Info.plist
_install_ios/lib/libz.a.xcframework/: Info.plist
_install_ios/lib/libzano-plain-wallet.xcframework/: Info.plist  VERSION
_install_ios/lib/libzano.xcframework/: Info.plist  VERSION
_install_linux/zano/arm64/: VERSION
_install_linux/zano/x86_64/: VERSION
_install_macosx/libboost.xcframework/: Info.plist
_install_macosx/libiconv.xcframework/: Info.plist
_install_macosx/libopenssl.xcframework/: Info.plist
_install_macosx/libzano-plain-wallet.xcframework/: Info.plist
_install_macosx/libzano.xcframework/: Info.plist
_install_windows/boost/arm64/lib/: libboost_atomic-vc143-mt-a64-1_84.lib  libboost_chrono-vc143-mt-a64-1_84.lib  libboost_date_time-vc143-mt-a64-1_84.lib  libboost_filesystem-vc143-mt-a64-1_84.lib  libboost_locale-vc143-mt-a64-1_84.lib  libboost_log-vc143-mt-a64-1_84.lib  libboost_log_setup-vc143-mt-a64-1_84.lib  libboost_program_options-vc143-mt-a64-1_84.lib  libboost_regex-vc143-mt-a64-1_84.lib  libboost_serialization-vc143-mt-a64-1_84.lib  libboost_system-vc143-mt-a64-1_84.lib  libboost_thread-vc143-mt-a64-1_84.lib  libboost_timer-vc143-mt-a64-1_84.lib  libboost_wserialization-vc143-mt-a64-1_84.lib
_install_windows/boost/x86_64/lib/: libboost_atomic-vc143-mt-x64-1_84.lib  libboost_chrono-vc143-mt-x64-1_84.lib  libboost_date_time-vc143-mt-x64-1_84.lib  libboost_filesystem-vc143-mt-x64-1_84.lib  libboost_locale-vc143-mt-x64-1_84.lib  libboost_log-vc143-mt-x64-1_84.lib  libboost_log_setup-vc143-mt-x64-1_84.lib  libboost_program_options-vc143-mt-x64-1_84.lib  libboost_regex-vc143-mt-x64-1_84.lib  libboost_serialization-vc143-mt-x64-1_84.lib  libboost_system-vc143-mt-x64-1_84.lib  libboost_thread-vc143-mt-x64-1_84.lib  libboost_timer-vc143-mt-x64-1_84.lib  libboost_wserialization-vc143-mt-x64-1_84.lib
_install_windows/openssl/arm64/include/openssl/: configuration.h
_install_windows/openssl/arm64/lib/: libcrypto.lib  libssl.lib
_install_windows/openssl/x86_64/include/openssl/: configuration.h  opensslv.h
_install_windows/openssl/x86_64/lib/: libcrypto.lib  libssl.lib
_install_windows/zano/arm64/lib/: common.lib  crypto.lib  currency_core.lib  ethash.lib  lmdb.lib  mdbx.lib  miniupnpc.lib  pch.lib  rpc.lib  stratum.lib  wallet.lib  zlibstatic.lib
_install_windows/zano/x86_64/: VERSION
_install_windows/zano/x86_64/lib/: common.lib  crypto.lib  currency_core.lib  ethash.lib  lmdb.lib  mdbx.lib  miniupnpc.lib  pch.lib  rpc.lib  stratum.lib  wallet.lib  zlibstatic.lib
_libs_android/openssl/armeabi-v7a/include/openssl/: opensslv.h
_libs_ios/boost/lib/cmake/boost_atomic-1.76.0/: boost_atomic-config.cmake  libboost_atomic-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_chrono-1.76.0/: boost_chrono-config.cmake  libboost_chrono-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_date_time-1.76.0/: boost_date_time-config.cmake  libboost_date_time-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_filesystem-1.76.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_headers-1.76.0/: boost_headers-config.cmake
_libs_ios/boost/lib/cmake/boost_locale-1.76.0/: boost_locale-config.cmake  libboost_locale-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_program_options-1.76.0/: boost_program_options-config.cmake  libboost_program_options-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_regex-1.76.0/: boost_regex-config.cmake  libboost_regex-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_serialization-1.76.0/: boost_serialization-config.cmake  libboost_serialization-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_system-1.76.0/: boost_system-config.cmake  libboost_system-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_thread-1.76.0/: boost_thread-config.cmake  libboost_thread-variant-static.cmake
_libs_ios/boost/lib/cmake/boost_timer-1.76.0/: boost_timer-config.cmake  libboost_timer-variant-static.cmake
android/: build.sh
ios/: build.sh
macosx/: build.sh
scripts/: download-sources.sh  download-tar.bat  download-tar.sh  windows-bash.sh  zano-version.bat
wasm/: CMakeLists.txt  README.md  build-wasm.sh  package.json  tsconfig.json
wasm/examples/: demo.html
wasm/js/: loader.ts  types.ts  worker.ts
wasm/shims/: execinfo.h  misc_language.h
wasm/src/: c_api.cpp  c_api.h  transport.hpp  transport_js.cpp  transport_native.cpp
windows/: build.bat  build.sh
(+127 files in other folders)
